tests/paczka1/small_fuzzy/60925419.err
Error in line 2: gkLmRHnUY S437 116,9
Error in line 6: gkLmRHnUY S822 34,9
Error in line 4: uhBj S437 20,2
